--- a/Data Project/Final Report/FSSI-Project-Final-Report.tex
+++ b/Data Project/Final Report/FSSI-Project-Final-Report.tex
@@ -501,7 +501,7 @@ The financial health of social service charities affects their ability to delive
 \caption{Budget status per Main Activity}
 \end{figure}
 
-Small social service charities were more likely to operate budget deficits and a balanced budged than medium-sized and large charities. Around 43.6\% of small charities operated budget deficits, compared to 21.7\% of large organisations and 33.9\% of medium-sized organisations in 2016. Figures changed to 44\%, 24.9\% and 31.9\% respectively in 2017.\\
+Small social service charities were more likely to operate budget deficits and a balanced budget than medium-sized and large charities. Around 43.6\% of small charities operated budget deficits, compared to 21.7\% of large organisations and 33.9\% of medium-sized organisations in 2016. Figures changed to 44\%, 24.9\% and 31.9\% respectively in 2017.\\
 Around 40.9\% of small charities in 2016 and 44\% in 2017 operated budget surplus compared to 77.8\% and 75.1\% of large charities and 63.7\% and 66.4\% of medium-sized charities. Conversely, 15.5\%/11.3\% of small charities operated in a balanced budget, compared to 2.4\%/2.7\% of medium-sized organisations and 0.5\%/0\% of large charities.\\
 Charities whose main activity was law and legal services were more likely to operate budget surpluses in 2016 while Charities whose main activity was income support and maintenance were more likely in 2017. Charities whose main activity was international activities were most likely to operate budget deficits in 2016 but in 2017 civic and advocacy activities charities got the highest chance of budget deficits. Charities whose main activity was social service were most likely to have balanced budgets in 2016 but law and legal service charities became more likely in 2017.
 
@@ -532,6 +532,8 @@ Government grants are the majority of funding sources for charities and not-for-
 
 \hypertarget{financial-health-of-sector-1}{%
 \subsubsection{Financial Health of Sector}\label{financial-health-of-sector-1}}
+
+The visualisations exploring the financial health of the sector uncovered some concerning information. Considering the large contribution made to the social services sector by charities and not-for-profits, it is alarming that such a high percentage of charities are running a budget deficit each year. Any budget deficit places a given charity at risk of collapsing, but this risk is far greater to small charities that don't have the same cultural/marketing capital as larger charities. Therefore the fact that a greater percentage of smaller charities run a budget deficit compared to their medium- and large-sized contemporaries hints at a possible instability in the sector. Whilst ACNC data for 2018, 2019, and 2020 is not available at the time of writing this report, it would be remiss to predict that these small charities running a budget deficit would be able to endure the economic effects of the COVID-19 crisis without experiencing stability.
 
 \hypertarget{method-of-analysis}{%
 \subsection{Method of Analysis}\label{method-of-analysis}}
