--- a/Data Project/Final Report/FSSI Project Final Report.Rmd
+++ b/Data Project/Final Report/FSSI Project Final Report.Rmd
@@ -271,7 +271,7 @@ The financial health of social service charities affects their ability to delive
 
 ![Budget status per Main Activity](Fig6 Budget Status props.PNG)
 
-Small social service charities were more likely to operate budget deficits and a balanced budged than medium-sized and large charities. Around 43.6% of small charities operated budget deficits, compared to 21.7% of large organisations and 33.9% of medium-sized organisations in 2016. Figures changed to 44%, 24.9% and 31.9% respectively in 2017.    
+Small social service charities were more likely to operate budget deficits and a balanced budget than medium-sized and large charities. Around 43.6% of small charities operated budget deficits, compared to 21.7% of large organisations and 33.9% of medium-sized organisations in 2016. Figures changed to 44%, 24.9% and 31.9% respectively in 2017.    
 Around 40.9% of small charities in 2016 and 44% in 2017 operated budget surplus compared to 77.8% and 75.1% of large charities and 63.7% and 66.4% of medium-sized charities. Conversely, 15.5%/11.3% of small charities operated in a balanced budget, compared to 2.4%/2.7% of medium-sized organisations and 0.5%/0%  of large charities.  
 Charities whose main activity was law and legal services were more likely to operate budget surpluses in 2016 while Charities whose main activity was income support and maintenance were more likely in 2017. Charities whose main activity was international activities were most likely to operate budget deficits in 2016 but in 2017 civic and advocacy activities charities got the highest chance of budget deficits. Charities whose main activity was social service were most likely to have balanced budgets in 2016 but law and legal service charities became more likely in 2017.
 
@@ -298,27 +298,22 @@ Government grants are the majority of funding sources for charities and not-for-
 
 ### Financial Health of Sector
 
-
-
-
+The visualisations exploring the financial health of the sector uncovered some concerning information. Considering the large contribution made to the social services sector by charities and not-for-profits, it is alarming that such a high percentage of charities are running a budget deficit each year. Any budget deficit places a given charity at risk of collapsing, but this risk is far greater to small charities that don't have the same cultural/marketing capital as larger charities. Therefore the fact that a greater percentage of smaller charities run a budget deficit compared to their medium- and large-sized contemporaries hints at a possible instability in the sector. Whilst ACNC data for 2018, 2019, and 2020 is not available at the time of writing this report, it would be remiss to predict that these small charities running a budget deficit would be able to endure the economic effects of the COVID-19 crisis without experiencing stability.
 
 ## Method of Analysis
 
-## Limitations and Improvements
+Data visualisation techniques often out-perform other methods of exploratory data analysis such as descriptive statistics, especially when using complex data with many variables or data that isn't normally distributed. As the ACNC data from 2016 and 2017 displayed all these properties, data visualisations allowed for concise summaries to be generated that offer insights into the nature of the data.  
+As the majority of the variables were continuous or integer numeric variables, there were restrictions surrounding how data could be categorised during analysis. Main activity and charity size were frequently used, along with the created variable for Year, when visualising numeric variables.
 
-The  data used in this report is sourced from Annual Information Statements (AIS) collected by the ACNC from registered charities categorised as charities and not-for-profit organisations. The reasons for changes in social services sector include:
+## Limitations and Recommendations
 
-- Changes in numbers of charities registered with the ACNC
-- Main activity of charities are changed which may explain the big increase in the number of social services charities
-- More charities completed and submitted the AIS before due date
 
-While the report gives a detailed visualization of the data set, there still need improvements in .
 
 ## Summary
 
 
 \newpage
-\setstretch{1.25}
+\setstretch{1.125}
 ```{r, echo=FALSE, results='asis'}
 cat("\\onecolumn")
 ```
