Discussion_and_Exec_Summary
Updates to the discussion, primarily Limitations and Recommendations.
Also updates to the Executive Summary section under Acknowlegement, Declaration or Originality, and Glossary.

--- a/Data Project/Final Report/FSSI Project Final Report.Rmd
+++ b/Data Project/Final Report/FSSI Project Final Report.Rmd
@@ -28,9 +28,19 @@ geometry: margin=15mm
 
 ## Acknowledgement {-}
 
+Xuejiao and Ben would like to extend our gratitude to Paul Ramcharan, Jessica Lee-Ack, and Brooke McKail; our partners in FSSI and VCOSS for their invaluable mentorship and comprehensive industry knowledge that provided insight throughout this project. We would also like to thank RMIT for making this project possible as not only organisers of the project itself but also industry partners for FSSI. 
+
 ## Declaration of Originality {-}
 
+Xuejiao and Ben declare that, to the best of our knowledge, all work contained within this report and any supporting documentation is original, unless otherwise stated. Sources are referenced in RMIT-Harvard style, and some documents in the appendices have been created and shared by either FSSI or VCOSS.
+
 ## Glossary {-}
+
+- FSSI - Future Social Services Institute
+- VCOSS - Victorian Council of Social Service
+- RMIT - Royal Melbourne Institute of Technology
+- *Main activity* - variable name derived from ACNC data, loosely interchangeable with "sector". Charities report the main activity they perform to the ACNC, but also report secondary activities as well. Main activity only pertains to this main activity as reported by charities to the ACNC
+
 
 ## Student Contributions {-}
 
@@ -307,6 +317,9 @@ As the majority of the variables were continuous or integer numeric variables, t
 
 ## Limitations and Recommendations
 
+Data visualisations served well to explore the Victorian ACNC data considering its complex nature. However, the visualisations made use of categorical variables too frequently when exploring continuous variabels, and further visualisations could have been produced exploring bivariate continuous data visualisations, such as scatter plots.  
+The dot-and-line visualisations used to observe changes in continuous variables between the two years comprised considerable white/blank space when only examining a small number of categories, or when examining variables with a wide dispersion of data points between categories. For data summaries of a small nature, other visualisations could be explored, particularly using frames of a `plotly` animation to see changes over time.  
+The project also only considered one data source; ACNC data in 2016 and 2017. There is scope for further data to be sourced or collected to gain further understanding of the contribution that charities make to the social services sector. Furthermore, as the data only pertained to charities and not-for-profits, it was not possible to quantify the impact of charities on the entire sector. Data from other sources would facilitate this comparison, for example allowing comparisons to be drawn to for-profit businesses also offering social services.
 
 
 ## Summary
